tests/bad/variant2.ml
type t = A | B
type u = B

let _ = function A -> "a" | B -> "b"
